refactor data model and updates dependencies